--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Lists Lab</title>
   </head>
   <body>
-    <!-- Write your HTML in this file -->
+    <!--  Practicing HTML listing in this file -->
   <ul>
   <li>2 slices of bread</li>
   <li>
